# CuSIR

./: Cluster_pw.txt  LICENSE  N_cpu_2.npy  N_gpu.npy  N_vec.npy  README.md  READMEPyPI.md  cpu_time.npy  cpu_time_2.npy  cpu_vs_gpu.ipynb  cusir.py  gpu_time.npy  gpu_time_2.npy  main.ipynb  numba_cuda.ipynb  pf_old.py  pyproject.toml  rf_old.py  setup.cfg  setup.py  system.ipynb  system.py
data/exp_0/: t_p_0.0.npy  t_p_0.08888888888888889.npy  t_p_0.1111111111111111.npy  t_p_0.17777777777777778.npy  t_p_0.2222222222222222.npy  t_p_0.26666666666666666.npy  t_p_0.3333333333333333.npy  t_p_0.35555555555555557.npy  t_p_0.4444444444444444.npy  t_p_0.5333333333333333.npy  t_p_0.5555555555555556.npy  t_p_0.6222222222222222.npy  t_p_0.6666666666666666.npy  t_p_0.7111111111111111.npy  t_p_0.7777777777777777.npy  t_p_0.8.npy  t_p_0.8888888888888888.npy  t_p_1.0.npy  u_cm_p_0.0.npy  u_cm_p_0.08888888888888889.npy  u_cm_p_0.1111111111111111.npy  u_cm_p_0.17777777777777778.npy  u_cm_p_0.2222222222222222.npy  u_cm_p_0.26666666666666666.npy  u_cm_p_0.3333333333333333.npy  u_cm_p_0.35555555555555557.npy  u_cm_p_0.4444444444444444.npy  u_cm_p_0.4444444444444445.npy  u_cm_p_0.5333333333333333.npy  u_cm_p_0.5555555555555556.npy  u_cm_p_0.6222222222222222.npy  u_cm_p_0.6666666666666666.npy  u_cm_p_0.7111111111111111.npy  u_cm_p_0.7777777777777777.npy  u_cm_p_0.8.npy  u_cm_p_0.8888888888888888.npy  u_cm_p_1.0.npy
src/cusir/: cusir.py  system.py
src/cusir.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: opencv_real_time_visualization.py
