[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = "cusir"
version = "1.0.7"
authors = [
  { name="renzozs", email="renzozagarrasaez@gmail.com" },
]
keywords = ["sir", "epidemiology", "CuPy", "GPU", "CUDA", "diffusion", "reaction-diffusion","parallel computing"]
description = "A SIR diffusive model based in CuPy solver"
readme = "READMEPyPI.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/RenzoZS/CuSIR"
"Bug Tracker" = "https://github.com/RenzoZS/CuSIR/issues"
